--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "node-app-http-client": "git+https://github.com/colo/node-app-http-client.git",
+    "node-express-authorization": "git+https://github.com/colo/node-express-authorization.git",
     "node-mngr-worker": "git+https://github.com/colo/node-mngr-worker.git",
     "vue": "^2.5.11",
     "vue-resource": "^1.4.0"
